Refactor: Integrate C++ tools for screensaver and logging
This commit introduces JNI integration for C++ based tools, specifically for fetching screensaver image URLs and enhancing logging capabilities.

**Key Changes:**

- **JNI Integration:**
    - Added `JNICommon.kt` to manage JNI calls and related WorkManager tasks for fetching screensaver image lists.
    - Updated `MainActivity.kt` to initialize and start the WorkManager for JNI tasks.
    - Added `libJellyfinCPPTools.so` for various architectures to `app/src/main/jniLibs`.
    - Modified `app/build.gradle.kts` to include `jniLibs`.
- **C++ Tools (CPPTools):**
    - **Screensaver Image Fetching:**
        - `HttpGQScreensaver` now takes hostname and port as parameters to query image lists, removing the dependency on `ClientConfig`.
        - `ClientConfig.h` and `ClientConfig.cpp` have been removed.
        - `main.cpp` updated to reflect changes in `HttpGQScreensaver` and removed client config loading.
    - **Logging:**
        - `GLog.h` and `GLog.cpp` enhanced with `logD` and `logE` functions for Android-specific logging using `__android_log_write`.
    - **CMake:**
        - `CMakeLists.txt` updated to:
            - Conditionally include sources and link libraries based on the platform (WIN32 or ANDROID).
            - Link against `log-lib` on Android.
            - Link against `zlibd` instead of `zlib` on Windows.
- **Build:**
    - Updated `VersionUtils.kt` to increment the development version.
    - Updated Drogon related DLLs and LIBs in `CPPTools/dll` and `CPPTools/libs/win`.
    - Added `zlibd.lib` and `zlibd1.dll`.

**Purpose:**

This refactoring aims to leverage C++ for performance-critical tasks like network requests for screensaver images and provide a more robust logging mechanism, especially on Android. The JNI bridge allows seamless communication between Kotlin and C++ components.

--- a/CPPTools/CMakeLists.txt
+++ b/CPPTools/CMakeLists.txt
@@ -4,10 +4,9 @@ project(JellyfinCPPTools)
 
 set(CMAKE_CXX_STANDARD 23)
 
-include_directories(include)
+message(STATUS "System name: ${CMAKE_SYSTEM_NAME}")
 
 include(FetchContent)
-
 FetchContent_Declare(
         yaml-cpp
         GIT_REPOSITORY https://github.com/jbeder/yaml-cpp.git
@@ -15,23 +14,23 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(yaml-cpp)
 
-set(SRC_FILES src/library.cpp
-        src/HttpGQScreensaver.cpp
-        include/HttpGQScreensaver.h
-        main.cpp
-        jni.cpp
-        src/DrogonServer.cpp
-        include/DrogonServer.h
-        src/DrogonConfig.cpp
-        include/DrogonConfig.h
-        src/GLog.cpp
-        include/GLog.h
-        src/ClientConfig.cpp
-        include/ClientConfig.h
-        src/DrogonScreensaverController.cpp
-        include/DrogonScreensaverController.h)
-
 if (WIN32)
+    include_directories(include)
+
+    set(SRC_FILES src/library.cpp
+            src/HttpGQScreensaver.cpp
+            include/HttpGQScreensaver.h
+            main.cpp
+            jni.cpp
+            src/DrogonServer.cpp
+            include/DrogonServer.h
+            src/DrogonConfig.cpp
+            include/DrogonConfig.h
+            src/GLog.cpp
+            include/GLog.h
+            src/DrogonScreensaverController.cpp
+            include/DrogonScreensaverController.h)
+    message("Platform: " "WIN32")
     link_directories(${CMAKE_CURRENT_SOURCE_DIR}/libs/win)
 
     add_executable(${PROJECT_NAME} ${SRC_FILES})
@@ -42,13 +41,22 @@ if (WIN32)
     file(GLOB DATA_FILES ${CMAKE_CURRENT_SOURCE_DIR}/config/*.yaml)
     file(COPY ${DATA_FILES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/config/)
 
-    target_link_libraries(${PROJECT_NAME} PUBLIC drogon jsoncpp trantor brotlicommon brotlidec brotlienc cares zlib)
+    target_link_libraries(${PROJECT_NAME} PUBLIC drogon jsoncpp trantor brotlicommon brotlidec brotlienc cares zlibd)
+
 
 elseif (ANDROID)
-    add_library(${PROJECT_NAME} SHARED ${SRC_FILES})
+    message("Platform: " "ANDROID")
+    include_directories(include)
+    find_library(log-lib log)
+    add_library(${PROJECT_NAME} SHARED include/GLog.h src/GLog.cpp
+            include/httplib.h
+            include/HttpGQScreensaver.h
+            src/HttpGQScreensaver.cpp
+            jni.cpp
+            )
+
+    target_link_libraries(${PROJECT_NAME} PUBLIC ${log-lib})
 endif ()
 
-
 target_link_libraries(${PROJECT_NAME} PUBLIC yaml-cpp::yaml-cpp)
-
 
