Feat: Add listen port config and improve logging
This commit introduces the following changes:

- **Configurable Listen Port:**
    - Added `ListenPort` to `drogon-config.yaml` to allow configuration of the Drogon server's listening port.
    - `DrogonConfig.h` and `DrogonConfig.cpp` updated to load and provide this new configuration.
    - `main.cpp` now uses the configured port to start the Drogon server.
- **Enhanced Logging:**
    - `GLog.h` and `GLog.cpp` now include methods to get and format timestamps.
    - Log outputs now include timestamps for better traceability.
    - `DrogonScreensaverController.cpp` now logs the IP address of incoming requests and the list of queried images.
- **CMake Improvements:**
    - `CMakeLists.txt` updated to differentiate between Debug and Release builds for linking libraries and copying DLLs.
    - DLLs and LIBs are now organized into `debug` and `release` subdirectories.
- **Android JNI:**
    - `JNICommon.kt` now uses a `Json` instance with `ignoreUnknownKeys = true` and `isLenient = true` for parsing screensaver image lists.
- **Server Thread Management:**
    - Changed `t.detach()` to `t.join()` in `main.cpp` to ensure the main thread waits for the Drogon server thread to complete.

--- a/CPPTools/CMakeLists.txt
+++ b/CPPTools/CMakeLists.txt
@@ -31,18 +31,28 @@ if (WIN32)
             src/DrogonScreensaverController.cpp
             include/DrogonScreensaverController.h)
     message("Platform: " "WIN32")
-    link_directories(${CMAKE_CURRENT_SOURCE_DIR}/libs/win)
+    message("IS_DEBUG: " ${CMAKE_BUILD_TYPE})
+
+    if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
+        link_directories(${CMAKE_CURRENT_SOURCE_DIR}/libs/win/debug)
+    else ()
+        link_directories(${CMAKE_CURRENT_SOURCE_DIR}/libs/win/release)
+    endif ()
 
     add_executable(${PROJECT_NAME} ${SRC_FILES})
-
-    file(GLOB DATA_FILES ${CMAKE_CURRENT_SOURCE_DIR}/dll/*.dll)
-    file(COPY ${DATA_FILES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
 
     file(GLOB DATA_FILES ${CMAKE_CURRENT_SOURCE_DIR}/config/*.yaml)
     file(COPY ${DATA_FILES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/config/)
 
-    target_link_libraries(${PROJECT_NAME} PUBLIC drogon jsoncpp trantor brotlicommon brotlidec brotlienc cares zlibd)
-
+    if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
+        file(GLOB DATA_FILES ${CMAKE_CURRENT_SOURCE_DIR}/dll/debug/*.dll)
+        file(COPY ${DATA_FILES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
+        target_link_libraries(${PROJECT_NAME} PUBLIC drogon jsoncpp trantor brotlicommon brotlidec brotlienc cares zlibd)
+    else ()
+        file(GLOB DATA_FILES ${CMAKE_CURRENT_SOURCE_DIR}/dll/release/*.dll)
+        file(COPY ${DATA_FILES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
+        target_link_libraries(${PROJECT_NAME} PUBLIC drogon jsoncpp trantor brotlicommon brotlidec brotlienc cares zlib)
+    endif ()
 
 elseif (ANDROID)
     message("Platform: " "ANDROID")
