Feat: Enhance GLog and JNI for screensaver image handling
This commit introduces several enhancements to the GLog utility and JNI functions, primarily focused on improving screensaver image management.

GLog changes:
- Added `EnableLog` flag to control logging output.
- Introduced `NullLogStream` to suppress output when logging is disabled.
- Improved error handling for log file operations.

JNI changes:
- Added `init` function to set cache directory path and debug mode.
- Added `setCurrentServerUrl` function to store the current server URL.
- Added `downloadScreensaverRemoteImageListToLocalPath` function to download images to a local path.

Screensaver image handling:
- Introduced `Constants` class to store global constants like cache path and server URL.
- Created `ScreensaverImageList` class to manage the list of screensaver images, including updating and downloading them.
- Integrated these changes into `StartupActivity` and `MainActivity` to initialize JNI and manage server URL for screensaver.

Additionally, Bugly crash reporting has been added to `JellyfinApplication`.
Precompiled native libraries have been updated to reflect these C++ changes.

--- a/CPPTools/CMakeLists.txt
+++ b/CPPTools/CMakeLists.txt
@@ -19,6 +19,7 @@ if (WIN32)
 
     set(SRC_FILES
             include/mobile/HttpGQScreensaver.h
+            src/mobile/HttpGQScreensaver.cpp
             main.cpp
             jni.cpp
             src/desktop/DrogonServer.cpp
@@ -28,7 +29,13 @@ if (WIN32)
             src/GLog.cpp
             include/GLog.h
             src/desktop/DrogonScreensaverController.cpp
-            include/desktop/DrogonScreensaverController.h)
+            include/desktop/DrogonScreensaverController.h
+            src/Constants.cpp
+            include/Constants.h
+            src/mobile/ScreensaverImageList.cpp
+            include/mobile/ScreensaverImageList.h
+
+            )
     message("Platform: " "WIN32")
     message("IS_DEBUG: " ${CMAKE_BUILD_TYPE})
 
@@ -61,6 +68,10 @@ elseif (ANDROID)
             include/httplib.h
             include/mobile/HttpGQScreensaver.h
             src/mobile/HttpGQScreensaver.cpp
+            src/Constants.cpp
+            include/Constants.h
+            src/mobile/ScreensaverImageList.cpp
+            include/mobile/ScreensaverImageList.h
             jni.cpp
             )
 
