feat(weather): Add weather display to toolbar
This commit introduces a weather display feature to the application's toolbar.

Key changes:
- Added a `GQWeather` composable to display weather information.
- Integrated `GQWeather` into the main toolbar.
- Modified JNI layer to fetch weather data and cache it locally.
  - `queryWeather` now saves fetched data to `weather_cache.json` and returns a success/failure code.
  - New JNI function `getCacheWeather` reads weather data from the cache file.
- Updated `JNICommon.kt` to reflect changes in the native methods.
- Included `play-services-contextmanager` dependency.
- Updated prebuilt native libraries.
- Added Amap API key for weather data fetching.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -40,6 +40,7 @@ markwon = "4.6.2"
 mockk = "1.14.4"
 slf4j-timber = "0.0.4"
 timber = "5.0.1"
+playServicesContextmanager = "9.4.0"
 
 [plugins]
 aboutlibraries = { id = "com.mikepenz.aboutlibraries.plugin", version.ref = "aboutlibraries" }
@@ -127,6 +128,7 @@ android-desugar = { module = "com.android.tools:desugar_jdk_libs", version.ref =
 kotest-runner-junit5 = { module = "io.kotest:kotest-runner-junit5", version.ref = "kotest" }
 kotest-assertions = { module = "io.kotest:kotest-assertions-core", version.ref = "kotest" }
 mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
+play-services-contextmanager = { group = "com.google.android.gms", name = "play-services-contextmanager", version.ref = "playServicesContextmanager" }
 
 [bundles]
 acra = [
