Reorder toolbar icons
This commit moves the "Apps" icon to be positioned before the "Settings" icon in both the HomeToolbar and StartupToolbar. This change aims to improve the user experience by placing frequently used actions in a more intuitive order.

--- a/CPPTools/CMakeLists.txt
+++ b/CPPTools/CMakeLists.txt
@@ -45,6 +45,8 @@ if (WIN32)
             include/desktop/WeatherData.h
             src/desktop/DrogonWeatherController.cpp
             include/desktop/DrogonWeatherController.h
+            include/desktop/HAMqttCallback.h
+            src/desktop/HAMqttCallback.cpp
 
     )
     message("Platform: " "WIN32")
