--- a/CPPTools/CMakeLists.txt
+++ b/CPPTools/CMakeLists.txt
@@ -1,8 +1,9 @@
-cmake_minimum_required(VERSION 3.31)
+﻿cmake_minimum_required(VERSION 3.31)
 
 project(JellyfinCPPTools)
 
 set(CMAKE_CXX_STANDARD 23)
+
 
 message(STATUS "System name: ${CMAKE_SYSTEM_NAME}")
 
@@ -108,6 +109,10 @@ elseif (ANDROID)
             )
 
     target_link_libraries(${PROJECT_NAME} PUBLIC ${log-lib})
+
+    add_custom_command(TARGET ${CMAKE_PROJECT_NAME} POST_BUILD
+		        COMMAND "${CMAKE_STRIP}" --strip-unneeded "$<TARGET_FILE:${CMAKE_PROJECT_NAME}>"
+    )
 endif ()
 
 target_link_libraries(${PROJECT_NAME} PUBLIC yaml-cpp::yaml-cpp)
